# scrtdd

./: .clang-format  CMakeLists.txt  README.md  clang-format.sh
apps/scrtdd/: CMakeLists.txt  app.cpp  app.h  catalog.cpp  catalog.h  csvreader.cpp  csvreader.h  ellipsoid.ipp  hddutils.cpp  hddutils.h  hypodd.cpp  hypodd.h  lrucache.h  lsmr.cpp  lsmr.h  lsmrBase.cpp  lsmrBase.h  lsqrBase.cpp  main.cpp  msg.cpp  msg.h  rtdd.cpp  rtdd.h  rtddtool.cpp  rtddtool.h  solver.cpp  solver.h  wfmngr.cpp  wfmngr.h  xcorrcache.ipp
apps/scrtdd/config/: rtdd.cfg  scrtdd.cfg
apps/scrtdd/descriptions/: scrtdd.xml
apps/scrtdd/hdd/: catalog.cpp  catalog.h  clustering.cpp  clustering.h  csvreader.cpp  csvreader.h  datasrc.cpp  datasrc.h  distance.cpp  distance.h  ellipsoid.ipp  hypodd.cpp  hypodd.h  lsmr.cpp  lsmr.h  lsqr.cpp  lsqr.h  solver.cpp  solver.h  ttt.cpp  ttt.h  utils.cpp  utils.h  waveform.cpp  waveform.h  wfmngr.cpp  wfmngr.h  xcorrcache.ipp
doc/: CMakeLists.txt  build-doc.py
doc/apps/: scrtdd.rst
doc/base/: continuous.rst  database.rst  intro.rst  introduction.rst  multievent.rst  plugin.rst  references.rst  singleevent.rst  ttt.rst  waveforms.rst  xcorr.rst
doc/templates/: conf.py  index.rst
libs/hdd/: CMakeLists.txt  catalog.cpp  catalog.h  clustering.cpp  clustering.h  csvreader.cpp  csvreader.h  cvttt.cpp  cvttt.h  dd.cpp  dd.h  ellipsoid.h  ellipsoid.ipp  hypodd.cpp  hypodd.h  index.h  kdtree.h  log.cpp  log.h  lrucache.h  lsqr.h  nllgrid.cpp  nllgrid.h  nllttt.cpp  nllttt.h  random.h  sccatalog.cpp  sccatalog.h  scttt.cpp  scttt.h  solver.cpp  solver.h  timewindow.h  trace.h  ttt.cpp  ttt.h  utctime.cpp  utctime.h  utils.cpp  utils.h  (+7 more)
libs/hdd/adapters/: CMakeLists.txt  scconversion.h  sclog.cpp  sclog.h  scttt.cpp  scttt.h  scutils.cpp  scutils.h  scwaveform.cpp  scwaveform.h
libs/hdd/nll/: grid.cpp  grid.h
libs/hdd/test/: CMakeLists.txt  clustering.cpp  common.ipp  dd.cpp  ddse.cpp  ellipsoid.cpp  ttt.cpp  waveform.cpp
libs/hdd/test/data/etc/: global.cfg
libs/hdd/test/data/nll/: clean.sh  generate.ch  stations.in
libs/hdd/test/data/nll/iasp91_2D_azimuthal_equidist/model/: iasp91.S.mod.hdr
libs/hdd/test/data/nll/iasp91_2D_azimuthal_equidist/run/: Vel2Grid.in  general.in  phaseP.run  phaseS.run
libs/hdd/test/data/nll/iasp91_2D_azimuthal_equidist/time/: iasp91.P.ST01A.angle.buf  iasp91.P.ST01A.angle.hdr  iasp91.P.ST01A.time.buf  iasp91.P.ST01A.time.hdr  iasp91.P.ST01B.angle.buf  iasp91.P.ST01B.time.buf  iasp91.P.ST02A.angle.buf  iasp91.P.ST02A.time.buf  iasp91.P.ST02A.time.hdr  iasp91.P.ST02B.angle.buf  iasp91.P.ST02B.angle.hdr  iasp91.P.ST02B.time.buf  iasp91.P.ST02B.time.hdr  iasp91.P.ST03A.angle.buf  iasp91.P.ST03A.time.buf  iasp91.P.ST03A.time.hdr  iasp91.P.ST03B.angle.buf  iasp91.P.ST03B.time.buf  iasp91.P.ST03B.time.hdr  iasp91.P.ST04A.angle.buf  iasp91.P.ST04A.angle.hdr  iasp91.P.ST04A.time.buf  iasp91.P.ST04B.angle.buf  iasp91.P.ST04B.time.buf  iasp91.P.ST04B.time.hdr  iasp91.P.mod.buf  iasp91.S.ST01A.angle.buf  iasp91.S.ST01A.time.buf  iasp91.S.ST01B.angle.buf  iasp91.S.ST01B.angle.hdr  iasp91.S.ST01B.time.buf  iasp91.S.ST01B.time.hdr  iasp91.S.ST02A.angle.buf  iasp91.S.ST02A.angle.hdr  iasp91.S.ST02A.time.buf  iasp91.S.ST02A.time.hdr  iasp91.S.ST02B.angle.buf  iasp91.S.ST02B.angle.hdr  iasp91.S.ST02B.time.buf  iasp91.S.ST02B.time.hdr  (+16 more)
libs/hdd/test/data/nll/iasp91_2D_global/run/: Grid2Time.in  Vel2Grid.in  general.in
libs/hdd/test/data/nll/iasp91_2D_lambert/model/: iasp91.P.mod.buf  iasp91.P.mod.hdr  iasp91.S.mod.buf
libs/hdd/test/data/nll/iasp91_2D_lambert/run/: Vel2Grid.in  general.in
libs/hdd/test/data/nll/iasp91_2D_lambert/time/: iasp91.P.ST01A.angle.buf  iasp91.P.ST01A.angle.hdr  iasp91.P.ST01A.time.buf  iasp91.P.ST01B.angle.buf  iasp91.P.ST01B.time.buf  iasp91.P.ST01B.time.hdr  iasp91.P.ST02A.angle.buf  iasp91.P.ST02A.time.buf  iasp91.P.ST02A.time.hdr  iasp91.P.ST02B.angle.buf  iasp91.P.ST02B.angle.hdr  iasp91.P.ST02B.time.buf  iasp91.P.ST03A.angle.buf  iasp91.P.ST03A.time.buf  iasp91.P.ST03B.angle.buf  iasp91.P.ST03B.angle.hdr  iasp91.P.ST03B.time.buf  iasp91.P.ST03B.time.hdr  iasp91.P.ST04A.angle.buf  iasp91.P.ST04A.time.buf  iasp91.P.ST04A.time.hdr  iasp91.P.ST04B.angle.buf  iasp91.P.ST04B.angle.hdr  iasp91.P.ST04B.time.buf  iasp91.P.ST04B.time.hdr  iasp91.P.mod.buf  iasp91.S.ST01A.angle.buf  iasp91.S.ST01A.time.buf  iasp91.S.ST01A.time.hdr  iasp91.S.ST01B.angle.buf  iasp91.S.ST01B.angle.hdr  iasp91.S.ST01B.time.buf  iasp91.S.ST01B.time.hdr  iasp91.S.ST02A.angle.buf  iasp91.S.ST02A.angle.hdr  iasp91.S.ST02A.time.buf  iasp91.S.ST02B.angle.buf  iasp91.S.ST02B.time.buf  iasp91.S.ST02B.time.hdr  (+12 more)
libs/hdd/test/data/share/ttt/: iasp91.tbl
libs/hdd/test/data/waveform/: snr3.mseed  snr7.mseed  xcorr3.mseed  xcorr4.mseed  xcorr6.mseed
libs/hdd/test/nll/iasp91_2D_global/run/: Vel2Grid.in
libs/hdd/test/nll/iasp91_2D_sdc/run/: general.in
libs/hdd/test/nll/iasp91_2D_simple/run/: Vel2Grid.in
libs/hdd/test/nll/iasp91_3D_global/run/: Vel2Grid.in
libs/hdd/test/nll/iasp91_3D_sdc/: .seismicitydefaults
libs/hdd/test/nll/iasp91_3D_simple/run/: general.in
libs/hdd/test/waveform/: snr1.mseed  snr2.mseed  snr5.mseed  snr6.mseed  xcorr1.mseed  xcorr2.mseed  xcorr5.mseed
libs/hdd/ttt/: generic2d.cpp  generic2d.h  homogeneous.cpp  homogeneous.h  kdtree.h  nllgrid.cpp  nllgrid.h
libs/hddsc/test/: CMakeLists.txt  common.ipp  ttt.cpp  waveform.cpp
libs/hddsc/test/data/: nll
libs/hddsc/test/data/etc/: global.cfg
libs/hddsc/test/data/nll/: generate.ch
libs/hddsc/test/data/nll/iasp91_2D_azimuthal_equidist/: generate.sh
libs/hddsc/test/data/share/: nll
libs/hddsc/test/data/share/ttt/: iasp91.hed
libs/hddsc/test/data/waveform/: snr4.mseed
plugins/locator/rtddloc/: CMakeLists.txt  rtddloc.cpp  rtddloc.h
plugins/locator/rtddloc/descriptions/: global_rtddloc.xml
plugins/ttt/generic2d/: CMakeLists.txt  generic2d_ttt.cpp
plugins/ttt/generic2d/descriptions/: global_generic2d.xml
plugins/ttt/nll/: CMakeLists.txt  nll_ttt.cpp
plugins/ttt/nll/descriptions/: global_nllttt.xml
plugins/ttt/nllgrid/: CMakeLists.txt  nllgrid.cpp
(+292 files in other folders)
