SET(RTDD_TARGET scrtdd)

SET(RTDD_SOURCES
		msg.cpp
		rtddtool.cpp
		main.cpp
)

INCLUDE_DIRECTORIES(${HDD_DIR})

ADD_DEFINITIONS( -DRTDD_VERSION="${VERSION_STR}" )

SC_ADD_EXECUTABLE(RTDD ${RTDD_TARGET})
TARGET_LINK_LIBRARIES(${RTDD_TARGET} hdd)
SC_LINK_LIBRARIES_INTERNAL(${RTDD_TARGET} hddsc client)
SC_INSTALL_INIT(${RTDD_TARGET} ${CMAKE_CURRENT_SOURCE_DIR}/../../../../base/common/apps/templates/initd.py)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
