SET(PACKAGE_NAME RTDD_RELOCATOR)

SET(${PACKAGE_NAME}_SOURCES	rtddloc.cpp)

SET(${PACKAGE_NAME}_HEADERS rtddloc.h)

INCLUDE_DIRECTORIES(${RTDDMSG_DIR}) 

SC_ADD_PLUGIN_LIBRARY(${PACKAGE_NAME} rtddloc "")
SC_LINK_LIBRARIES_INTERNAL(rtddloc core rtddmsg)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
