SET(PACKAGE_NAME TTTGeneric2D)

SET(${PACKAGE_NAME}_SOURCES
	generic2d_ttt.cpp
)

SC_ADD_PLUGIN_LIBRARY(${PACKAGE_NAME} tttgeneric2d "")
TARGET_LINK_LIBRARIES(tttgeneric2d hdd)
SC_LINK_LIBRARIES_INTERNAL(tttgeneric2d core)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
