SET(PACKAGE_NAME NLLTTT)

SET(${PACKAGE_NAME}_SOURCES
	nll_ttt.cpp
)

SC_ADD_PLUGIN_LIBRARY(${PACKAGE_NAME} nllttt "")
TARGET_LINK_LIBRARIES(nllttt hdd)
SC_LINK_LIBRARIES_INTERNAL(nllttt core)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

