SET(PACKAGE_NAME TTTNLL)

SET(${PACKAGE_NAME}_SOURCES
	nll_ttt.cpp
)

SC_ADD_PLUGIN_LIBRARY(${PACKAGE_NAME} tttnll "")
TARGET_LINK_LIBRARIES(tttnll hdd)
SC_LINK_LIBRARIES_INTERNAL(tttnll core)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

