SET(PACKAGE_NAME NLLGRID)

SET(${PACKAGE_NAME}_SOURCES
	nllgrid.cpp
)

SC_ADD_PLUGIN_LIBRARY(${PACKAGE_NAME} nllgrid "")
TARGET_LINK_LIBRARIES(nllgrid hdd)
SC_LINK_LIBRARIES_INTERNAL(nllgrid core)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

